--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,15 +1,1 @@
-.button {
-  @apply font-bold;
-  @apply py-2;
-  @apply px-4;
-  @apply rounded;
-}
-
-.button-blue {
-  @apply bg-blue-500;
-  @apply text-white;
-
-  &:hover {
-    @apply bg-blue-700;
-  }
-}
+@import "./components/buttons.scss";
