--- a/client/src/styles/components/form.scss
+++ b/client/src/styles/components/form.scss
@@ -2,7 +2,13 @@
   @apply text-gray-700;
   @apply bg-gray-200;
   @apply rounded;
+  @apply rounded-b-none;
   @apply px-2;
+  
+
+  @apply border-b;
+  @apply border-b-2;
+  @apply border-blue-500;
 
   * {
     @apply block;
